--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@tealbase/tealbase-js",
-  "version": "0.34.0",
+  "version": "0.35.0",
   "description": "tealbase Realtime API",
   "main": "./lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
     "test": "mocha -r @babel/register -r babel-polyfill  test/unit/**/*.js",
     "test:integration": "mocha -r @babel/register -r babel-polyfill  test/integration/**/*.js",
+    "test:auth": "mocha  --timeout 15000 -r @babel/register -r babel-polyfill test/integration/testAuth.js",
     "test:integration:full": "docker-compose up -d && sleep 10 && mocha -r @babel/register -r babel-polyfill  test/integration/**/*.js ; docker-compose down --remove-orphans",
     "test:prod": "cross-env BABEL_ENV=production npm run test",
     "test:watch": "npm test -- --watch",
@@ -21,7 +22,7 @@
     "lib",
     "src"
   ],
-  "repository": "https://github.com/tealbase/tealbase",
+  "repository": "https://github.com/tealbase/tealbase-js",
   "keywords": [
     "tealbase",
     "realtime",
@@ -31,21 +32,23 @@
   "author": "tealbase",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tealbase/tealbase/issues"
+    "url": "https://github.com/tealbase/tealbase-js/issues"
   },
   "homepage": "https://tealbase.io",
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/preset-env": "^7.8.3",
     "@babel/register": "^7.8.3",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-minify": "^0.5.1",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "cross-env": "^7.0.2",
     "jest-websocket-mock": "^2.0.1",
-    "mocha": "^7.1.0",
+    "mocha": "^8.0.1",
     "nyc": "^15.0.0",
     "rimraf": "^3.0.2"
   },
@@ -53,6 +56,7 @@
     "@tealbase/doctest-js": "^0.1.0",
     "@tealbase/postgrest-js": "^0.16.1",
     "@tealbase/realtime-js": "^0.9.0",
+    "dotenv": "^8.2.0",
     "superagent": "^5.2.1"
   }
 }
