--- a/package.json
+++ b/package.json
@@ -1,62 +1,54 @@
 {
   "name": "@tealbase/tealbase-js",
-  "version": "0.35.0",
-  "description": "tealbase Realtime API",
-  "main": "./lib/index.js",
-  "scripts": {
-    "clean": "rimraf lib",
-    "test": "mocha -r @babel/register -r babel-polyfill  test/unit/**/*.js",
-    "test:integration": "mocha -r @babel/register -r babel-polyfill  test/integration/**/*.js",
-    "test:auth": "mocha  --timeout 15000 -r @babel/register -r babel-polyfill test/integration/testAuth.js",
-    "test:integration:full": "docker-compose up -d && sleep 10 && mocha -r @babel/register -r babel-polyfill  test/integration/**/*.js ; docker-compose down --remove-orphans",
-    "test:prod": "cross-env BABEL_ENV=production npm run test",
-    "test:watch": "npm test -- --watch",
-    "test:examples": "node examples/",
-    "cover": "nyc --check-coverage && npm test",
-    "build": "BABEL_ENV=production babel src --out-dir lib",
-    "prepublish": "npm run clean && npm run build",
-    "deploy:minor": "npm version minor && npm publish --access=public",
-    "deploy:patch": "npm version patch && npm publish --access=public"
-  },
-  "files": [
-    "lib",
-    "src"
-  ],
-  "repository": "https://github.com/tealbase/tealbase-js",
+  "version": "0.0.0",
+  "description": "Isomorphic Javascript client for tealbase.",
   "keywords": [
-    "tealbase",
-    "realtime",
-    "postgrest",
-    "javascript"
+    "javascript",
+    "typescript",
+    "tealbase"
   ],
-  "author": "tealbase",
+  "homepage": "https://github.com/tealbase/tealbase-js",
+  "bugs": "https://github.com/tealbase/tealbase-js/issues",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/tealbase/tealbase-js/issues"
-  },
-  "homepage": "https://tealbase.io",
-  "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/register": "^7.8.3",
-    "babel-plugin-add-module-exports": "^1.0.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-minify": "^0.5.1",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "cross-env": "^7.0.2",
-    "jest-websocket-mock": "^2.0.1",
-    "mocha": "^8.0.1",
-    "nyc": "^15.0.0",
-    "rimraf": "^3.0.2"
+  "author": "tealbase",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/main/index.js",
+  "module": "dist/module/index.js",
+  "repository": "tealbase/tealbase-js",
+  "scripts": {
+    "clean": "rimraf dist docs",
+    "format": "prettier --write \"{src,test}/**/*.ts\"",
+    "build": "run-s clean format build:*",
+    "build:main": "tsc -p tsconfig.json",
+    "build:module": "tsc -p tsconfig.module.json",
+    "test": "jest --runInBand",
+    "test:db": "cd infra/db && docker-compose down && docker-compose up -d && sleep 5",
+    "test:clean": "cd infra/db && docker-compose down",
+    "docs": "typedoc --mode file --target ES6 --theme minimal",
+    "docs:json": "typedoc --json docs/spec.json --mode modules --includeDeclarations --excludeExternals"
   },
   "dependencies": {
-    "@tealbase/doctest-js": "^0.1.0",
-    "@tealbase/postgrest-js": "^0.16.1",
-    "@tealbase/realtime-js": "^0.9.0",
-    "dotenv": "^8.2.0",
-    "superagent": "^5.2.1"
+    "@tealbase/gotrue-js": "^1.7.1",
+    "@tealbase/postgrest-js": "^0.21.1",
+    "@tealbase/realtime-js": "^1.0.6"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.13",
+    "husky": "^4.3.0",
+    "jest": "^26.4.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.3.0",
+    "typedoc": "^0.19.1",
+    "typescript": "^4.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
