--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "repository": "tealbase/tealbase-js",
   "scripts": {
     "clean": "rimraf dist docs",
-    "coverage": "jest --runInBand --coverage",
     "format": "prettier --write \"{src,test}/**/*.ts\"",
     "build": "run-s clean format build:*",
     "build:main": "tsc -p tsconfig.json",
@@ -30,6 +29,7 @@
     "build:umd": "webpack",
     "types-generate": "dts-gen -m '@tealbase/tealbase-js' -s",
     "test": "jest --runInBand",
+    "test:coverage": "jest --runInBand --coverage",
     "test:db": "cd infra/db && docker-compose down && docker-compose up -d && sleep 5",
     "test:watch": "jest --watch --verbose false --silent false",
     "test:clean": "cd infra/db && docker-compose down",
@@ -37,24 +37,25 @@
     "docs:json": "typedoc --entryPoints src/index.ts --includes src/**/*.ts --json docs/v2/spec.json --excludeExternals"
   },
   "dependencies": {
-    "@tealbase/functions-js": "^2.0.0",
-    "@tealbase/gotrue-js": "^2.0.1",
-    "@tealbase/postgrest-js": "^1.0.0",
-    "@tealbase/realtime-js": "^2.0.0",
-    "@tealbase/storage-js": "^2.0.0",
+    "@tealbase/functions-js": "^2.1.0",
+    "@tealbase/gotrue-js": "^2.12.0",
+    "@tealbase/postgrest-js": "^1.1.1",
+    "@tealbase/realtime-js": "^2.4.0",
+    "@tealbase/storage-js": "^2.3.1",
     "cross-fetch": "^3.1.5"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.13",
+    "@types/jest": "^29.2.5",
     "husky": "^4.3.0",
-    "jest": "^26.4.1",
+    "jest": "^29.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
     "semantic-release-plugin-update-version-in-files": "^1.1.0",
-    "ts-jest": "^26.3.0",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^8.0.11",
+    "ts-node": "^10.9.1",
     "typedoc": "^0.22.16",
     "typescript": "^4.5.5",
     "webpack": "^5.69.1",
