--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -2,11 +2,21 @@ name: CI
 
 on:
   pull_request:
+    paths-ignore:
+      - 'docs/**'
+      - '**/*.md'
+      - '.prettierrc'
+      - '**/*ignore'
   push:
     branches:
       - master
       - next
       - rc
+    paths-ignore:
+      - 'docs/**'
+      - '**/*.md'
+      - '.prettierrc'
+      - '**/*ignore'
 
 jobs:
   test:
@@ -14,7 +24,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: ['16']
+        node: ['18']
 
     runs-on: ${{ matrix.os }}
 
