--- a/package.json
+++ b/package.json
@@ -28,21 +28,24 @@
     "build:module": "tsc -p tsconfig.module.json",
     "build:umd": "webpack",
     "types-generate": "dts-gen -m '@tealbase/tealbase-js' -s",
-    "test": "jest --runInBand",
+    "test": "run-s test:types test:run",
+    "test:run": "jest --runInBand",
     "test:coverage": "jest --runInBand --coverage",
     "test:db": "cd infra/db && docker-compose down && docker-compose up -d && sleep 5",
     "test:watch": "jest --watch --verbose false --silent false",
     "test:clean": "cd infra/db && docker-compose down",
+    "test:types": "run-s build:module && tsd --files test/*.test-d.ts",
     "docs": "typedoc --entryPoints src/index.ts --out docs/v2 --includes src/**/*.ts",
-    "docs:json": "typedoc --entryPoints src/index.ts --includes src/**/*.ts --json docs/v2/spec.json --excludeExternals"
+    "docs:json": "typedoc --entryPoints src/index.ts --includes src/**/*.ts --json docs/v2/spec.json --excludeExternals",
+    "serve:coverage": "npm run test:coverage && serve test/coverage"
   },
   "dependencies": {
-    "@tealbase/functions-js": "^2.1.0",
-    "@tealbase/gotrue-js": "2.43.1",
-    "@tealbase/postgrest-js": "^1.7.0",
-    "@tealbase/realtime-js": "^2.7.3",
-    "@tealbase/storage-js": "^2.5.1",
-    "cross-fetch": "^3.1.5"
+    "@tealbase/functions-js": "2.1.5",
+    "@tealbase/gotrue-js": "2.62.2",
+    "@tealbase/node-fetch": "2.6.15",
+    "@tealbase/postgrest-js": "1.9.2",
+    "@tealbase/realtime-js": "2.9.3",
+    "@tealbase/storage-js": "2.5.5"
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
@@ -53,9 +56,11 @@
     "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
     "semantic-release-plugin-update-version-in-files": "^1.1.0",
+    "serve": "^14.2.1",
     "ts-jest": "^29.0.5",
     "ts-loader": "^8.0.11",
     "ts-node": "^10.9.1",
+    "tsd": "^0.30.4",
     "typedoc": "^0.22.16",
     "typescript": "^4.5.5",
     "webpack": "^5.69.1",
