--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "build:umd": "webpack",
     "types-generate": "dts-gen -m '@tealbase/tealbase-js' -s",
     "test": "run-s test:types test:run",
-    "test:run": "jest --runInBand",
-    "test:coverage": "jest --runInBand --coverage",
+    "test:all": "run-s test:types test:run test:integration test:integration:browser",
+    "test:run": "jest --runInBand --detectOpenHandles",
+    "test:coverage": "jest --runInBand --coverage --testPathIgnorePatterns=\"test/integration.*\"",
+    "test:integration": "jest --runInBand --detectOpenHandles test/integration.test.ts",
+    "test:integration:browser": "deno test --allow-all test/integration.browser.test.ts",
     "test:db": "cd infra/db && docker-compose down && docker-compose up -d && sleep 5",
     "test:watch": "jest --watch --verbose false --silent false",
     "test:clean": "cd infra/db && docker-compose down",
@@ -40,21 +43,23 @@
     "serve:coverage": "npm run test:coverage && serve test/coverage"
   },
   "dependencies": {
-    "@tealbase/auth-js": "2.68.0",
+    "@tealbase/auth-js": "2.70.0",
     "@tealbase/functions-js": "2.4.4",
     "@tealbase/node-fetch": "2.6.15",
-    "@tealbase/postgrest-js": "1.18.1",
-    "@tealbase/realtime-js": "2.11.2",
+    "@tealbase/postgrest-js": "1.19.4",
+    "@tealbase/realtime-js": "2.11.10",
     "@tealbase/storage-js": "2.7.1"
   },
   "devDependencies": {
     "@sebbo2002/semantic-release-jsr": "^1.0.0",
+    "@solana/wallet-standard-features": "^1.3.0",
     "@types/jest": "^29.2.5",
     "husky": "^4.3.0",
     "jest": "^29.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
+    "puppeteer": "^24.9.0",
     "rimraf": "^3.0.2",
     "semantic-release-plugin-update-version-in-files": "^1.1.0",
     "serve": "^14.2.1",
