--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "test:coverage": "jest --runInBand --coverage --testPathIgnorePatterns=\"test/integration|test/deno\"",
     "test:integration": "jest --runInBand --detectOpenHandles test/integration.test.ts",
     "test:integration:browser": "deno test --allow-all test/integration.browser.test.ts",
+    "test:edge-functions": "deno test --allow-all --no-check test/deno/edge-functions-integration.test.ts",
     "test:watch": "jest --watch --verbose false --silent false",
     "test:node:playwright": "cd test/integration/node-browser && npm install && cp ../../../dist/umd/tealbase.js . && npm run test",
     "test:bun": "cd test/integration/bun && bun install && bun test",
@@ -54,7 +55,7 @@
     "@tealbase/node-fetch": "2.6.15",
     "@tealbase/postgrest-js": "1.19.4",
     "@tealbase/realtime-js": "2.11.15",
-    "@tealbase/storage-js": "2.7.1"
+    "@tealbase/storage-js": "^2.10.4"
   },
   "devDependencies": {
     "@sebbo2002/semantic-release-jsr": "^1.0.0",
